feat(wip): Add deployment.yaml files and its readme
Add node-cron to implement cron job

Change background

WIP: Implement dynamoDb service

--- a/Frontend/public/index.css
+++ b/Frontend/public/index.css
@@ -43,7 +43,7 @@
   display: none;
 }
 #recent-title {
-  color: #444;
+  color: #f5eded;
   font-weight: bold;
   font-size: 30px;
   margin-left: 10px;
