--- a/Frontend/public/style.css
+++ b/Frontend/public/style.css
@@ -10,7 +10,9 @@ body {
   padding: 0;
 }
 html {
-  background-image: url("background.jpg");
+  background-image: url("workdesk2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #menu {
